--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -22,7 +22,7 @@ slots:
                   
 apps:
   celluloid-snap:
-    command: usr/bin/celluloid
+    command: usr/local/bin/celluloid
     extensions: [gnome]
     common-id: org.community.celluloid
     plugs:
@@ -66,6 +66,10 @@ parts:
       craftctl default
       craftctl set version=$(git describe --tags)
       
+    stage-packages:
+      - libopencl-clang13
+      - libsdl2-2.0-0
+      - libxss1
       
     
    
