--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -79,6 +79,7 @@ parts:
       - ocl-icd-libopencl1
       - libsdl2-2.0-0
       - libxss1
+      - ffmpeg
       - libxv1
       - libaom3
       - libavdevice58
