--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -93,7 +93,9 @@ parts:
       - luajit
       - libffmpeg-nvenc-dev
       
-      
+    override-prime: |
+      craftctl default
+      /sbin/ldconfig -v
      
     
      
