--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -14,7 +14,7 @@ architectures:
     
 layout:
   /usr/bin/celluloid:
-    symlink: $SNAP/usr
+    symlink: $SNAP/usr/lib/x86_64-linux-gnu/blas
     
 slots:
   celluloid-snap:
