--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -26,6 +26,8 @@ apps:
   celluloid-snap:
     command: usr/local/bin/celluloid
     extensions: [gnome]
+    environment:
+      LD_LIBRARY_PATH: "$LD_LIBRARY_PATH:$SNAP/usr/lib/$CRAFT_ARCH_TRIPLET:$SNAP/usr/lib/$CRAFT_ARCH_TRIPLET/x86_64-linux-gnu/blas"
     common-id: org.community.celluloid
     plugs:
       - home
