--- a/snap/gui/celluloid.desktop
+++ b/snap/gui/celluloid.desktop
@@ -3,7 +3,7 @@ Type=Application
 Name=Celluloid-Snap
 GenericName=Multimedia Player
 Comment=Play movies and videos
-Icon=${SNAP}/meta/gui/gnome-mpv.png
+Icon=${SNAP}/meta/gui/gnome-mpv.svg
 Categories=GTK;GNOME;AudioVideo;Player;Video;TV;
 Keywords=Video;Movie;Film;Clip;Series;Player;DVD;TV;Disc;Album;Music;GNOME;mpv;
 Exec=celluloid-snap %U
