--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -19,16 +19,12 @@ slots:
     bus: session
     name: io.github.celluloid_player.Celluloid
     
-layout:
-  /usr/local/bin/celluloid:
-    symlink: $SNAP/usr
 
-                  
 apps:
   celluloid-snap:
     command: usr/local/bin/celluloid
     environment:
-      LD_LIBRARY_PATH: $SNAP/usr/lib/x86_64-linux-gnu/blas:$SNAP/usr/lib/x86_64-linux-gnu/lapack:$SNAP/usr/lib/x86_64-linux-gnu
+      LD_LIBRARY_PATH: $SNAP/usr/lib/x86_64-linux-gnu/blas:$SNAP/usr/lib/x86_64-linux-gnu/lapack:$SNAP/usr/lib/x86_64-linux-gnu:$SNAP/usr/local/share/glib-2.0
     extensions: [gnome]
     common-id: org.community.celluloid
     plugs:
