--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -25,7 +25,7 @@ apps:
     command: usr/local/bin/celluloid
     environment:
       LD_LIBRARY_PATH: $SNAP/usr/lib/x86_64-linux-gnu/blas:$SNAP/usr/lib/x86_64-linux-gnu/lapack:$SNAP/usr/lib/x86_64-linux-gnu
-      GSETTINGS_SCHEMA_DIR: $SNAP/usr/local/share/glib-2.0/schemas
+      GSETTINGS_SCHEMA_DIR: $SNAP/usr/local/share/glib-2.0/schemas:$SNAP/usr/share/glib-2.0/schemas
     extensions: [gnome]
     common-id: org.community.celluloid
     plugs:
