--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -24,7 +24,7 @@ apps:
   celluloid-snap:
     command: usr/local/bin/celluloid
     environment:
-      LD_LIBRARY_PATH: $SNAP/usr/lib/x86_64-linux-gnu/blas:$SNAP/usr/lib/x86_64-linux-gnu/lapack:$SNAP/usr/lib/x86_64-linux-gnu
+      LD_LIBRARY_PATH: $SNAP/usr/lib/x86_64-linux-gnu/blas:$SNAP/usr/lib/x86_64-linux-gnu/lapack:$SNAP/usr/lib/x86_64-linux-gnu:$SNAP/usr/local/share/glib-2.0/schemas:$SNAP/usr/share/glib-2.0/schemas
       GSETTINGS_SCHEMA_DIR: $SNAP/usr/local/share/glib-2.0/schemas:$SNAP/usr/share/glib-2.0/schemas
     extensions: [gnome]
     common-id: org.community.celluloid
