--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -12,6 +12,9 @@ architectures:
   - build-on: amd64
     build-for: amd64
     
+layout:
+  /usr/local/bin/celluloid:
+     symlink: $SNAP/usr/local/bin/celluloid
     
 slots:
   celluloid-snap:
@@ -25,7 +28,7 @@ apps:
     command: usr/local/bin/celluloid
     environment:
       LD_LIBRARY_PATH: $SNAP/usr/lib/x86_64-linux-gnu/blas:$SNAP/usr/lib/x86_64-linux-gnu/lapack:$SNAP/usr/lib/x86_64-linux-gnu
-      GSETTINGS_SCHEMA_DIR: $SNAP/usr/local/share/glib-2.0/schemas:$SNAP/usr/share/glib-2.0/schemas
+      GSETTINGS_SCHEMA_DIR: $SNAP/usr/local/share/glib-2.0/schemas
     extensions: [gnome]
     common-id: org.community.celluloid
     plugs:
