--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -19,9 +19,9 @@ slots:
     bus: session
     name: io.github.celluloid_player.Celluloid
     
-  mpris:
-    interface: mpris
-    name: org.mpris.MediaPlayer2.io.github.celluloid_player.Celluloid   
+  #mpris:
+    #interface: mpris
+    #name: org.mpris.MediaPlayer2.io.github.celluloid_player.Celluloid   
 
 apps:
   celluloid-snap:
@@ -48,8 +48,8 @@ apps:
       - removable-media
       - unity7
       - screen-inhibit-control
-    slots:
-      - mpris
+    #slots:
+      #- mpris
       
       
  
