--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -51,6 +51,13 @@ apps:
       - mpris
       
 parts:
+  mpv:
+   plugin: meson
+   source: https://github.com/mpv-player/mpv.git
+   meson-parameters:
+    - --prefix=/usr 
+  
+  
   libadwaita:
     plugin: meson
     source: https://gitlab.gnome.org/GNOME/libadwaita/-/archive/1.2.0/libadwaita-1.2.0.tar.bz2
@@ -70,7 +77,7 @@ parts:
   
   celluloid-snap:
     source: https://github.com/celluloid-player/celluloid.git
-    after: [libadwaita, yt-dlp]
+    after: [libadwaita, yt-dlp, mpv]
     plugin: meson
     meson-parameters:
       - --prefix=/usr
