--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -42,6 +42,28 @@ apps:
       - screen-inhibit-control
    
 parts:  
+  mpv:
+    source: https://github.com/mpv-player/mpv/archive/refs/tags/v0.35.1.tar.gz
+    plugin: meson
+    meson-parameters:
+      - -Dprefix=/usr
+      - -Dbuildtype=release
+      - -Dbuild-date=false
+      - -Dlua=enabled
+      - -Dpulse=enabled
+      - -Ddrm=enabled
+    build-packages:
+      - pkg-config
+      - libavfilter-dev
+      - libass-dev
+      - libpulse-dev
+      - libdrm-dev
+      - libva-dev
+      - liblua5.2-dev
+    stage-packages:
+      - libavfilter7
+      - liblua5.2-0
+      
   libadwaita:
     source: https://gitlab.gnome.org/GNOME/libadwaita.git
     source-tag: '1.3.1'
@@ -65,7 +87,7 @@ parts:
   
   celluloid-snap:
     source: https://github.com/celluloid-player/celluloid.git
-    after: [libadwaita, ffmpeg]
+    after: [libadwaita, ffmpeg, mpv]
     plugin: meson
     meson-parameters:
       - --prefix=/usr
