--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -152,6 +152,18 @@ parts:
       - libaom-dev
       - libmp3lame-dev
       - libvorbis-dev
+      - libass-dev 
+      - libfreetype6-dev
+      - libgnutls28-dev
+      - libmp3lame-dev
+      - libsdl2-dev
+      - libtool
+      - libva-dev
+      - libvdpau-dev
+      - libxcb1-dev 
+      - libxcb-shm0-dev 
+      - libxcb-xfixes0-dev
+      - zlib1g-dev
     stage-packages:
       - libmp3lame0
     stage:
