--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -120,4 +120,15 @@ parts:
       - libmp3lame0
     stage:
       - -usr/include  
- 
+      
+ # Find files provided by the base and platform snap and ensure they aren't
+  # duplicated in this snap
+  cleanup:
+    after: [celluloid-snap, ffmpeg]
+    plugin: nil
+    build-snaps: [core22, gtk-common-themes, gnome-42-2204]
+    override-prime: |
+      set -eux
+      for snap in "core22" "gtk-common-themes" "gnome-42-2204"; do
+        cd "/snap/$snap/current" && find . -type f,l -name *.so.* -exec rm -f "$CRAFT_PRIME/{}" \;
+      done
